figue/tests/integration/snapshots/main__integration__deser_errors__deser_error_file_nested_wrong_type.snap
---
source: crates/figue/tests/integration/deser_errors.rs
expression: "strip_ansi_escapes :: strip_str(& report.to_string())"
---
Error: failed to parse "lots" as u32 at config.database.max_connections
   ╭─[ config.json:4:24 ]
   │
 4 │                 "url": "postgres://localhost/db",
   │                        ────────────┬────────────  
   │                                    ╰────────────── failed to parse "lots" as u32 at config.database.max_connections
───╯
